# TalentTrove

./: .gitignore  README.md  example.ipynb  job_classification_test.csv  job_stages_test.csv  poetry.toml  pyproject.toml  streamlit_data.ipynb
talenttrove/VectorDB/: chroma.py
talenttrove/app/: App.py  __init__.py
talenttrove/app/.streamlit/: config.toml
talenttrove/app/components/: jobcard.py  recommendations.py  sidebar.py  tracking.py
talenttrove/app/config/: config.py
talenttrove/app/db/: sqlite.py
talenttrove/app/email/: flan.py  gmail.py  huggingchat.py  mail_extraction_pipeline.ipynb
talenttrove/app/models/: complete_classifier.py  data_stats.ipynb  flan.py  flant_test.ipynb  job_classification_test.csv  job_classifier.py  job_email_classifier_train.ipynb  job_stage.py  job_stage_classifier_train.ipynb  job_stages_test.csv
talenttrove/app/pages/: 1_Dashbaord.py  1_Dashboard.py  2_Matches.py  3_Jobs.py  4_Track.py  5_Email.py
talenttrove/app/recommendation/: engine.py
talenttrove/data/: techjobrepo.csv
talenttrove/data/applied_data/: jobs_applied.csv
talenttrove/data/classifiers/: Job_Email_Data.csv
talenttrove/data/companies/: tech_companies.csv
talenttrove/data/dummy_data/: applications.csv  applications.json
talenttrove/models/: Job_No_Job_classifier.ipynb
talenttrove/scrapers/: carbos.py  datagov.py  glassdoor.py  mycareersfuture.py  nodeflair.py  simplifyJobs.py  techjobrepo.py
tests/: chromadb_test.ipynb  data_preprocessing.ipynb  generated_jd_test.pkl  jd_generator.ipynb  jd_preprocessing.ipynb  mycareersfurture_cleaned.json
(+17 files in other folders)
