[tool.poetry]
name = "talenttrove"
version = "0.1.0"
description = ""
authors = ["Pratham <agarwalpratham2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
scrapy = "^2.10.1"
notebook = "^7.0.3"
jupyter = "^1.0.0"
ipykernel = "6.21.2"
pandas = "^2.1.1"
streamlit = "^1.27.2"
streamlit-authenticator = "^0.2.3"
python-dotenv = "^1.0.0"
flask = "2.1.2"
flask-restx = "^1.2.0"
jinja2 = "3.1.2"
flask-cors = "3.0.10"
flask-sqlalchemy = "2.5.1"
greenlet = "2.0.1"
pyjwt = "2.6.0"
iniconfig = "1.1.1"
itsdangerous = "2.1.2"
streamlit-antd-components = "^0.2.3"
pymilvus = "^2.3.2"
sentence-transformers = "^2.2.2"
chromadb = "^0.4.15"
openai = "^1.3.3"
langchain = "^0.0.338"
pypdf = "^3.17.1"
python-docx = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
